add order statuses migration,seeder,crud and test
